sandbox/output
TicketDispenserTest.java:63: error: cannot find symbol
        assertEquals(1001,firstVipTicketTurnNumber);
                          ^
  symbol:   variable firstVipTicketTurnNumber
  location: class TicketDispenserTest
1 error
